<resources xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">
    <string name="app_name" translatable="false">codeLove</string>
    <string name="description_icon">Icon</string>
    <string name="label_settings">Settings</string>
    <string name="label_local_storage">Local Storage</string>
    <string name="hint_search">Search…</string>
    <string name="hint_enter_file_name">Enter file name</string>
    <string name="hint_find_what">Find what?</string>
    <string name="hint_replace_what">Replace what?</string>
    <string name="hint_replace_with">Replace with:</string>
    <string name="hint_line">Line:</string>
    <string name="action_grant_access">Grant Access</string>
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>
    <string name="action_ok">OK</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_close">Close</string>
    <string name="action_create">Create</string>
    <string name="action_close_others">Close Others</string>
    <string name="action_close_all">Close All</string>
    <string name="action_copy_path">Copy Path</string>
    <string name="action_properties">Properties</string>
    <string name="action_folder">Folder</string>
    <string name="action_rename">Rename</string>
    <string name="action_delete">Delete</string>
    <string name="action_insert">Insert</string>
    <string name="action_match_case">Match Case</string>
    <string name="action_reg_exp">Regular Expressions</string>
    <string name="action_word_only">Word Only</string>
    <string name="action_find">Find</string>
    <string name="action_replace_all">Replace All</string>
    <string name="action_go_to">Go to</string>
    <string name="action_show_hidden_files">Show hidden files</string>
    <string name="action_get_it_for">Get it for 1,49 $</string>
    <string name="action_maybe_later">Maybe later</string>
    <string name="action_unlock_all_features">Unlock all features</string>
    <string name="dialog_title_choose_action">Choose action…</string>
    <string name="dialog_title_create">Create…</string>
    <string name="dialog_title_rename">Rename…</string>
    <string name="dialog_title_store">Get the Ultimate Edition</string>
    <string name="dialog_title_changelog">ChangeLog</string>
    <string name="dialog_title_privacy_policy">Privacy Policy</string>
    <string name="dialog_title_exit">Exit</string>
    <string name="dialog_title_properties">Properties</string>
    <string name="dialog_title_color_picker">Color Picker</string>
    <string name="dialog_title_find">Find…</string>
    <string name="dialog_title_replace_all">Replace All…</string>
    <string name="dialog_title_goto_line">Go to Line…</string>
    <string name="dialog_title_result">Result:</string>
    <string name="dialog_message_exit">Are you sure you want to exit? All changes will be saved into a cache</string>
    <string name="dialog_message_delete">Are you sure you want to delete this file? This action cannot be undone</string>
    <string name="properties_name">&lt;b>Name:&lt;/b> %s&lt;br></string>
    <string name="properties_path">&lt;b>Path:&lt;/b> %s&lt;br></string>
    <string name="properties_modified">&lt;b>Modified:&lt;/b> %s&lt;br></string>
    <string name="properties_size">&lt;b>Size:&lt;/b> %s&lt;br></string>
    <string name="properties_line_count">&lt;b>Line Count:&lt;/b> %s&lt;br></string>
    <string name="properties_word_count">&lt;b>Word Count:&lt;/b> %s&lt;br></string>
    <string name="properties_char_count">&lt;b>Character Count:&lt;/b> %s</string>
    <string name="properties_readable">R</string>
    <string name="properties_writable">W</string>
    <string name="properties_executable">X</string>
    <string name="sort_by_name">Sort by Name</string>
    <string name="sort_by_size">Sort by Size</string>
    <string name="sort_by_date">Sort by Date</string>
    <string name="message_access_denied">Access Denied</string>
    <string name="message_access_required">Explorer requires access to files in order to function correctly</string>
    <string name="message_no_result">No result</string>
    <string name="message_no_open_files">No open files</string>
    <string name="message_tab_limit_achieved">Tab limit achieved</string>
    <string name="message_cannot_be_opened">File cannot be opened</string>
    <string name="message_invalid_file_name">Invalid file name</string>
    <string name="message_error">An error occurred</string>
    <string name="message_done">Done</string>
    <string name="message_saved">Saved</string>
    <string name="message_select_file">Select File</string>
    <string name="message_nothing_to_cut">Nothing to cut</string>
    <string name="message_nothing_to_copy">Nothing to copy</string>
    <string name="message_nothing_to_paste">Nothing to paste</string>
    <string name="message_enter_the_text">Enter the text</string>
    <string name="message_line_above_than_0">Line must be above 0</string>
    <string name="message_line_not_exists">Line does not exists</string>
    <string name="message_no_errors_detected">No syntax errors detected</string>
    <string name="menu_file_new">New</string>
    <string name="menu_file">File</string>
    <string name="menu_file_open">Open</string>
    <string name="menu_file_save">Save</string>
    <string name="menu_file_properties">Properties</string>
    <string name="menu_file_close">Close</string>
    <string name="menu_edit_cut">Cut</string>
    <string name="menu_edit_copy">Copy</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_edit_paste">Paste</string>
    <string name="menu_edit_selectAll">Select All</string>
    <string name="menu_edit_selectLine">Select Line</string>
    <string name="menu_edit_deleteLine">Delete Line</string>
    <string name="menu_edit_duplicateLine">Duplicate Line</string>
    <string name="menu_search_find">Find</string>
    <string name="menu_search_replace_all">Replace All</string>
    <string name="menu_search_gotoLine">Go to Line</string>
    <string name="menu_tools_codeAnalysis">Code Analysis</string>
    <string name="menu_tools_insertColor">Insert Color</string>
    <string name="menu_overflow_settings">Settings</string>
    <string name="menu_overflow_search">Search</string>
    <string name="menu_overflow_tools">Tools</string>
    <string name="store_standard">Standard</string>
    <string name="store_ultimate">Ultimate</string>
    <string name="store_feature_1">Basic functionality</string>
    <string name="store_feature_2">Color schemes</string>
    <string name="store_feature_3">New font types</string>
    <string name="store_feature_4">Increased tab limit</string>
    <string name="store_feature_5">Auto-close quotes</string>
    <string name="store_feature_6">Code Analysis</string>
    <string name="store_feature_7">Color Picker</string>
    <string name="pref_header_application_title">Application</string>
    <string name="pref_header_application_summary">Configure global application settings.</string>
    <string name="pref_header_editor_title">Editor</string>
    <string name="pref_header_editor_summary">Configure the editor.</string>
    <string name="pref_header_codeStyle_title">Code Style</string>
    <string name="pref_header_codeStyle_summary">Configure the code style.</string>
    <string name="pref_header_files_title">Files</string>
    <string name="pref_header_files_summary">Configure how files are handled.</string>
    <string name="pref_header_about_title">About</string>
    <string name="pref_header_about_summary">View information about ModPE IDE.</string>
    <string name="pref_category_look_and_feel">Look And Feel</string>
    <string name="pref_category_other">Other</string>
    <string name="pref_category_font">Font</string>
    <string name="pref_category_tabs">Tabs</string>
    <string name="pref_category_editor">Editor</string>
    <string name="pref_category_keyboard">Keyboard</string>
    <string name="pref_category_code_style">Code Style</string>
    <string name="pref_category_file_explorer">File Explorer</string>
    <string name="pref_category_about">About</string>
    <string name="pref_category_contribute">Contribute</string>
    <string name="pref_color_scheme_title">Color Scheme</string>
    <string name="pref_color_scheme_summary">Configure the syntax highlighting color scheme.</string>
    <string name="pref_fullscreen_title">Full screen</string>
    <string name="pref_fullscreen_summary">Launch the application in full screen mode.</string>
    <string name="pref_confirm_exit_title">Confirm exit from the app</string>
    <string name="pref_confirm_exit_summary">If you press back, ModPE IDE ask for confirmation to exit.</string>
    <string name="pref_font_size_title">Editor font size</string>
    <string name="pref_font_size_summary">Specify the default font size of editor.</string>
    <string name="pref_font_type_title">Editor font type</string>
    <string name="pref_resume_session_title">Resume session</string>
    <string name="pref_resume_session_summary">Restore opened files for next launch.</string>
    <string name="pref_tab_limit_title">Tab Limit</string>
    <string name="pref_tab_limit_summary">Number of maximum tabs display on the screen.</string>
    <string name="pref_word_wrap_title">Word Wrap</string>
    <string name="pref_word_wrap_summary">Enable word wrap to fit screen width.</string>
    <string name="pref_code_completion_title">Code Completion</string>
    <string name="pref_code_completion_summary">Show autocomplete suggestions.</string>
    <string name="pref_pinch_zoom_title">Pinch Zoom</string>
    <string name="pref_pinch_zoom_summary">Enable zoom gesture in the editor.</string>
    <string name="pref_highlight_line_title">Highlight Current Line</string>
    <string name="pref_highlight_line_summary">Highlight the line where the caret currently resides.</string>
    <string name="pref_highlight_delimiters_title">Highlight Matching Delimiters</string>
    <string name="pref_highlight_delimiters_summary">Highlight the opening or closing delimiter when you set the caret at its pair.</string>
    <string name="pref_extended_keyboard_title">Extended Keyboard</string>
    <string name="pref_extended_keyboard_summary">Show additional keys above the keyboard.</string>
    <string name="pref_soft_keyboard_title">Soft Keyboard</string>
    <string name="pref_soft_keyboard_summary">Always use soft keyboard.</string>
    <string name="pref_ime_keyboard_title">IME Keyboard</string>
    <string name="pref_ime_keyboard_summary">Allows your keyboard to show hints when typing.</string>
    <string name="pref_auto_indent_title">Auto Indentation</string>
    <string name="pref_auto_indent_summary">Automatically indent new lines to match the line above.</string>
    <string name="pref_close_brackets_title">Auto-close Brackets</string>
    <string name="pref_close_brackets_summary">Automatically close open parenthesis/bracket/brace when typing.</string>
    <string name="pref_close_quotes_title">Auto-close Quotes</string>
    <string name="pref_close_quotes_summary">Automatically close single/double quote when typing.</string>
    <string name="pref_showHiddenFiles_title">Show hidden files</string>
    <string name="pref_showHiddenFiles_summary">Hidden files and folders (starting with a dot) will be displayed.</string>
    <string name="pref_foldersOnTop_title">Folders on top</string>
    <string name="pref_foldersOnTop_summary">Folders will be displayed on top.</string>
    <string name="pref_sortMode_title">Sort Mode</string>
    <string name="pref_about_standard_title">ModPE IDE - Standard Edition</string>
    <string name="pref_about_ultimate_title">ModPE IDE - Ultimate Edition</string>
    <string name="pref_about_summary">Copyright 2019 Light Team Software\nAll right reserved\n\nVersion: &app_version; (&app_code;)</string>
    <string name="pref_privacy_policy_title">Privacy Policy</string>
</resources>