<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Licensed to the Light Team Software (Light Team) under one or more
  ~ contributor license agreements.  See the NOTICE file distributed with
  ~ this work for additional information regarding copyright ownership.
  ~ The Light Team licenses this file to You under the Apache License, Version 2.0
  ~ (the "License"); you may not use this file except in compliance with
  ~ the License.  You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <item
        android:id="@+id/action_menu_file"
        android:title="@string/menu_file"
        android:icon="@drawable/ic_folder"
        app:iconTint="@color/colorIcon">
        <menu>
            <item
                android:id="@+id/action_close"
                android:title="@string/action_close"
                android:icon="@drawable/ic_close"
                app:iconTint="@color/colorIcon"/>
            <item
                android:id="@+id/action_close_others"
                android:title="@string/action_close_others"
                android:icon="@drawable/ic_row_others"
                app:iconTint="@color/colorIcon" />
            <item
                android:id="@+id/action_close_all"
                android:title="@string/action_close_all"
                android:icon="@drawable/ic_row_all"
                app:iconTint="@color/colorIcon"/>
        </menu>
    </item>
    <item
        android:id="@+id/action_menu_edit"
        android:title="@string/menu_edit"
        android:icon="@drawable/ic_edit"
        app:iconTint="@color/colorIcon">
        <menu>
            <item
                android:id="@+id/menu_edit_cut"
                android:title="@string/menu_edit_cut"
                android:icon="@drawable/ic_cut"
                app:iconTint="@color/colorIcon"/>
            <item
                android:id="@+id/menu_edit_copy"
                android:title="@string/menu_edit_copy"
                android:icon="@drawable/ic_copy"
                app:iconTint="@color/colorIcon"/>
            <item
                android:id="@+id/menu_edit_paste"
                android:title="@string/menu_edit_paste"
                android:icon="@drawable/ic_paste"
                app:iconTint="@color/colorIcon"/>
            <item
                android:id="@+id/menu_edit_selectAll"
                android:title="@string/menu_edit_selectAll"
                android:icon="@drawable/ic_select_all"
                app:iconTint="@color/colorIcon"/>
            <item
                android:id="@+id/menu_edit_selectLine"
                android:title="@string/menu_edit_selectLine"
                android:icon="@drawable/ic_line_select"
                app:iconTint="@color/colorIcon"/>
            <item
                android:id="@+id/menu_edit_deleteLine"
                android:title="@string/menu_edit_deleteLine"
                android:icon="@drawable/ic_minus"
                app:iconTint="@color/colorIcon"/>
            <item
                android:id="@+id/menu_edit_duplicateLine"
                android:title="@string/menu_edit_duplicateLine"
                android:icon="@drawable/ic_line_duplicate"
                app:iconTint="@color/colorIcon"/>
        </menu>
    </item>

    <item
        android:id="@+id/action_menu_search"
        android:title="@string/menu_overflow_search"
        android:icon="@drawable/ic_file_search"
        app:iconTint="@color/colorIcon">
        <menu>
            <item
                android:id="@+id/menu_search_find"
                android:title="@string/menu_search_find"
                android:icon="@drawable/ic_search"
                app:iconTint="@color/colorIcon"/>
            <item
                android:id="@+id/menu_search_replace_all"
                android:title="@string/menu_search_replace_all"
                android:icon="@drawable/ic_replace"
                app:iconTint="@color/colorIcon"/>
            <item
                android:id="@+id/menu_search_gotoLine"
                android:title="@string/menu_search_gotoLine"
                android:icon="@drawable/ic_line_goto"
                app:iconTint="@color/colorIcon"/>
        </menu>
    </item>
    <item
        android:id="@+id/action_menu_tools"
        android:title="@string/menu_overflow_tools"
        android:icon="@drawable/ic_tools"
        app:iconTint="@color/colorIcon">
        <menu>
            <item
                android:id="@+id/menu_tools_codeAnalysis"
                android:title="@string/menu_tools_codeAnalysis"
                android:icon="@drawable/ic_code_check"
                app:iconTint="@color/colorIcon"/>
            <item
                android:id="@+id/menu_tools_insertColor"
                android:title="@string/menu_tools_insertColor"
                android:icon="@drawable/ic_palette"
                app:iconTint="@color/colorIcon"/>
            <!--<item
                android:id="@+id/menu_tools_downloadSource"
                android:title="@string/menu_tools_downloadSource"/>-->
        </menu>
    </item>
    <item
        android:id="@+id/menu_overflow_settings"
        android:title="@string/menu_overflow_settings"
        android:icon="@drawable/ic_settings"
        app:iconTint="@color/colorIcon"/>
</menu>